--- a/static/sass/layout/_card.scss
+++ b/static/sass/layout/_card.scss
@@ -5,6 +5,8 @@
   border-radius: 1rem;
   padding: abs.rem(22);
 
+  overflow: hidden;
+
   &__header {
     color: var(--clr-dark-gray);
     font-weight: 500;
