--- a/static/sass/layout/_projects.scss
+++ b/static/sass/layout/_projects.scss
@@ -3,6 +3,8 @@
 .projectBar {
   grid-area: projectBar;
 
+  overflow-x: scroll;
+
   &__selections {
     margin-top: 1rem;
 
